# backend/src/auth/dto/auth-register-body.dto.ts
@@ -1,0 +1,18 @@
+import { IsIn, IsOptional, IsString, Matches } from 'class-validator';
+
+export class AuthRegisterBodyDTO {
+  @IsString()
+  @IsIn(['riverlevel'])
+  readonly role: string;
+
+  @IsString()
+  @Matches(/[a-z|A-Z|0-9]{3,20}/)
+  readonly owner: string;
+
+  @IsString()
+  readonly admin_key: string;
+
+  @IsString()
+  @IsOptional()
+  readonly description?: string;
+}
